# ONOS_OPTICAL_PATH

./: BUILD.bazel  README.md  readme.md
src/main/java/com/xyz/path/optical/: package-info.java
src/main/java/com/xyz/path/optical/impl/: OpticalPathManager.java  PrejudgeResourceManager.java  XyzPathManager.java  package-info.java
src/main/java/com/xyz/path/optical/impl/compiler/: OpticalPathCompiler.java  package-info.java
src/main/java/com/xyz/path/optical/intf/: OpticalPathService.java  PrejudgeResourceService.java  XyzRoutingService.java  package-info.java
src/main/java/com/xyz/path/optical/rest/: XyzRestApplication.java  XyzRestResource.java
src/main/resources/definitions/: OpticalPathIntent.json  PrejudgeResourceForOpticalService.json  package.json
src/main/webapp/WEB-INF/: web.xml
